# baseliner-adapter

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json
.cache/clangd/index/: MatMulWorkload.cu.25192E1409F2544F.idx  MatMulWorkload.hpp.C49FA0B20FC9350B.idx
cmake/: adapters.cmake
examples/: CMakeLists.txt  ExampleWorkload.hpp
examples/MatMulWorkload/: CMakeLists.txt  MatMulWorkload.hpp
examples/MatMulWorkload/cuda/: CMakeLists.txt  MatMulWorkload.cu
examples/MatMulWorkload/hip/: CMakeLists.txt  MatMulWorkload.hip
examples/cuda/: CMakeLists.txt  ExampleWorkload.cu
examples/hip/: CMakeLists.txt  ExampleWorkload.hip
include/adapters/: MinimalRegister.hpp  NVBenchRegister.hpp  PrimBenchRegister.hpp  Register.hpp
include/adapters/registrars/: BaselinerRegistrar.hpp  MinimalRegistrar.hpp  NVBenchRegistrar.hpp  PrimbenchRegistrar.hpp
shadow/baseliner/: Register.hpp
src/minimal/: MinimalAdapter.cpp
src/primbench/: PrimBenchAdapter.cpp  PrimBenchAdapter.hip
